[gd_scene load_steps=30 format=4 uid="uid://djeqqclckn4vk"]

[ext_resource type="TileSet" uid="uid://c4llvpweoft2a" path="res://SpriteSheets/Area2/Area2_Tileset.tres" id="1_r1qpv"]
[ext_resource type="Script" uid="uid://dpjsr6v7xo34l" path="res://Cenas/area_2.gd" id="1_tydfa"]
[ext_resource type="Script" uid="uid://bpxfin7e26cxw" path="res://Scripts/Classes/CaveSpaner/cave_spawner.gd" id="2_3xyyb"]
[ext_resource type="AudioStream" uid="uid://cqfvspup4073g" path="res://Audio/BGM/NES/02 Start Demo ~ BGM 1_end.wav" id="2_qh2i0"]
[ext_resource type="PackedScene" uid="uid://bmdvex1fvmnn5" path="res://Componentes/Inimigos/General/General.tscn" id="3_q3e8m"]
[ext_resource type="PackedScene" uid="uid://ctqf7dpoxu84c" path="res://Componentes/AreaHazardDestructable/colisao_agua.tscn" id="3_vd7x2"]
[ext_resource type="AudioStream" uid="uid://dcukornkrw1yy" path="res://Audio/BGM/NES/06 Stage Clear Demo.wav" id="3_vo0m5"]
[ext_resource type="PackedScene" uid="uid://fy47plw4s21o" path="res://Componentes/Menu_etc/hud.tscn" id="4_1d85u"]
[ext_resource type="PackedScene" uid="uid://c7jtwgsgdbpl2" path="res://Componentes/Inimigos/Infantaria/Infantaria.tscn" id="4_1dncf"]
[ext_resource type="PackedScene" uid="uid://bek8hshqdrwnf" path="res://Componentes/AreaHazardDestructable/colisao_pitfall.tscn" id="4_kb30a"]
[ext_resource type="AudioStream" uid="uid://dbf8wyaao7qlk" path="res://Audio/BGM/NES/04 Restart ~ BGM 1_end.wav" id="4_nyldk"]
[ext_resource type="PackedScene" uid="uid://iel7jsyjwxdj" path="res://Componentes/Inimigos/enemy_controller.tscn" id="4_tudxv"]
[ext_resource type="AudioStream" uid="uid://ceoxva8fjco0y" path="res://Audio/BGM/NES/05 Fortress.wav" id="5_5qy02"]
[ext_resource type="PackedScene" uid="uid://b7ye3664gw7kb" path="res://Componentes/Player/Player.tscn" id="5_33he6"]
[ext_resource type="PackedScene" uid="uid://bwayse1d5026n" path="res://Componentes/Spawner/MobSpawn.tscn" id="5_lmwas"]
[ext_resource type="TileSet" uid="uid://wof1f0qku4s1" path="res://SpriteSheets/Area1_TileSet2.tres" id="6_o4y78"]
[ext_resource type="Texture2D" uid="uid://bve7lh80jikv" path="res://SpriteSheets/Area2/area2_commando.png" id="7_1dncf"]
[ext_resource type="PackedScene" uid="uid://dydggnkiawk1j" path="res://Componentes/Checkpoint/Checkpoint.tscn" id="7_7eh82"]
[ext_resource type="PackedScene" uid="uid://bqqxo1s2dkdpx" path="res://Componentes/item_granada_extra/item_granada_extra.tscn" id="9_3xyyb"]
[ext_resource type="PackedScene" uid="uid://bysbvev0pgw6k" path="res://Componentes/Portao/Portao.tscn" id="12_q3e8m"]
[ext_resource type="PackedScene" uid="uid://cf12y07bm78m5" path="res://Componentes/Triggers/Trigger.tscn" id="13_1dncf"]
[ext_resource type="PackedScene" uid="uid://cr8vmfa6vf60a" path="res://Componentes/Inimigos/Infantaria_Escondida/infantaria_escondida.tscn" id="14_tudxv"]
[ext_resource type="PackedScene" uid="uid://bqxgebxbd4alj" path="res://Componentes/Inimigos_Area2/Jeep/spawner/jeep_spawner.tscn" id="16_wkod3"]
[ext_resource type="PackedScene" uid="uid://cfloxpubtlrsx" path="res://Componentes/Inimigos_Area2/Moto_Terra/spawner/moto_terra_spawner.tscn" id="17_3xyyb"]
[ext_resource type="PackedScene" uid="uid://cok23fi8vgvcq" path="res://Componentes/Inimigos_Area2/Turret/Turret.tscn" id="18_dmwlo"]
[ext_resource type="PackedScene" uid="uid://cg070bqy7rfj" path="res://Componentes/Spawner/hq_spawner.tscn" id="25_b25kb"]
[ext_resource type="PackedScene" uid="uid://b7gvfacur3e6q" path="res://Componentes/Triggers/troca_infantaria.tscn" id="27_qh2i0"]
[ext_resource type="PackedScene" uid="uid://due6ib0036l6r" path="res://Componentes/Inimigos_Area2/Humvee/spawner/Humvee_spawner.tscn" id="28_vo0m5"]
[ext_resource type="PackedScene" uid="uid://d0d724dgyu3xp" path="res://Componentes/Spawner/MotoSpawn.tscn" id="29_nyldk"]

[node name="Area2" type="Node2D"]
script = ExtResource("1_tydfa")
musica_inicial = ExtResource("2_qh2i0")
musica_intermission = ExtResource("3_vo0m5")
musica_retry = ExtResource("4_nyldk")
musica_fortress = ExtResource("5_5qy02")

[node name="Trigger_Mobs_Portao" parent="." instance=ExtResource("13_1dncf")]
position = Vector2(0, -3180)
collision_layer = 0
collision_mask = 2

[node name="Trigger" parent="." instance=ExtResource("13_1dncf")]
position = Vector2(0, -1590)
collision_layer = 0
collision_mask = 2

[node name="CaveSpawner" type="Node" parent="."]
script = ExtResource("2_3xyyb")
general = ExtResource("3_q3e8m")
infantaria = ExtResource("4_1dncf")

[node name="Marker2D" type="Marker2D" parent="CaveSpawner" groups=["SpawnMarkers"]]
position = Vector2(34.54, -1639)

[node name="Marker2D2" type="Marker2D" parent="CaveSpawner" groups=["SpawnMarkers"]]
position = Vector2(37.06, -1703.33)

[node name="Marker2D3" type="Marker2D" parent="CaveSpawner" groups=["SpawnMarkers"]]
position = Vector2(187.265, -1702.79)

[node name="Marker2D4" type="Marker2D" parent="CaveSpawner" groups=["SpawnMarkers"]]
position = Vector2(187.025, -1636.75)

[node name="Marker2D5" type="Marker2D" parent="CaveSpawner" groups=["SpawnMarkers"]]
position = Vector2(187.825, -1574.25)

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
modulate = Color(0.98, 0.8526, 0.8526, 1)
tile_map_data = PackedByteArray("AAAFAMv/AAAEAAAAAAAFAMz/AAAEAAEAAAAFAM3/AAAEAAIAAAAFAM7/AAAEAAMAAAAGAMv/AAAFAAAAAAAGAMz/AAAFAAEAAAAGAM3/AAAFAAIAAAAHAMv/AAAGAAAAAAAHAMz/AAAGAAEAAAAHAM3/AAAGAAIAAAAIAMv/AAAHAAAAAAAIAMz/AAAHAAEAAAAIAM3/AAAHAAIAAAAIAM7/AAAHAAMAAAAJAMv/AAALAAAAAAAJAMz/AAALAAEAAAAKAMv/AAAMAAAAAAAKAMz/AAAMAAEAAAALAMv/AAANAAAAAAALAMz/AAANAAEAAAAMAMv/AAAOAAAAAAAMAMz/AAAOAAEAAAANAMv/AAAPAAAAAAANAMz/AAAPAAEAAAAAAMv/AAALAAAAAAAAAMz/AAALAAEAAAABAMv/AAAMAAAAAAABAMz/AAAMAAEAAAACAMv/AAANAAAAAAACAMz/AAANAAEAAAADAMv/AAAOAAAAAAADAMz/AAAOAAEAAAAEAMv/AAAPAAAAAAAEAMz/AAAPAAEAAAA=")
tile_set = ExtResource("6_o4y78")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAAAL//AAAJAAAAAAAAAMD/AAAJAAEAAAAAAMH/AAAJAAIAAAAAAML/AAAJAAMAAAAAAMP/AAAJAAQAAAABAL//AAAKAAAAAAABAMD/AAAKAAEAAAABAMH/AAAKAAIAAAABAML/AAAKAAMAAAABAMP/AAAKAAQAAAACAMD/AAALAAEAAAACAMH/AAALAAIAAAACAML/AAALAAMAAAACAMP/AAALAAQAAAADAMD/AAAMAAEAAAADAMH/AAAMAAIAAAADAML/AAAMAAMAAAADAMP/AAAMAAQAAAAAAKH/AAAAAA4AAAAAAKL/AAAAAA8AAAAAAKP/AAAAABAAAAABAKH/AAABAA4AAAABAKL/AAABAA8AAAABAKP/AAABABAAAAACAKH/AAACAA4AAAACAKL/AAACAA8AAAACAKP/AAACABAAAAAAALL/AAAAAA8AAAAAALP/AAAAABAAAAABALH/AAABAA4AAAABALL/AAABAA8AAAABALP/AAABABAAAAACALL/AAACAA8AAAACALP/AAACABAAAAAMAKn/AAABAA4AABANAKr/AAAAAA8AABAMAKr/AAABAA8AABALAKr/AAACAA8AABANAKv/AAAAABAAABAMAKv/AAABABAAABALAKv/AAACABAAABAAAJP/AAAAAAMAAAAAAJT/AAAAAAQAAAAAAJX/AAAAAAUAAAAAAJb/AAAAAAYAAAAAAJf/AAAAAAcAAAAAAJj/AAAAAAgAAAAAAJn/AAAAAAkAAAAAAJr/AAAAAAoAAAAAAJv/AAAAAAsAAAAAAJz/AAAAAAwAAAAAAJ3/AAAAAA0AAAABAJP/AAABAAMAAAABAJT/AAABAAQAAAABAJX/AAABAAUAAAABAJb/AAABAAYAAAABAJf/AAABAAcAAAABAJj/AAABAAgAAAABAJn/AAABAAkAAAABAJr/AAABAAoAAAABAJv/AAABAAsAAAABAJz/AAABAAwAAAABAJ3/AAABAA0AAAACAJP/AAACAAMAAAACAJT/AAACAAQAAAACAJX/AAACAAUAAAACAJb/AAACAAYAAAACAJf/AAACAAcAAAACAJj/AAACAAgAAAACAJn/AAACAAkAAAACAJr/AAACAAoAAAACAJv/AAACAAsAAAACAJz/AAACAAwAAAACAJ3/AAACAA0AAAALAJP/AAAGAAAAAAALAJT/AAAGAAEAAAALAJX/AAAGAAIAAAALAJb/AAAGAAMAAAALAJf/AAAGAAQAAAALAJj/AAAGAAUAAAALAJn/AAAGAAYAAAALAJr/AAAGAAcAAAALAJv/AAAGAAgAAAALAJz/AAAGAAkAAAALAJ3/AAAGAAoAAAALAJ7/AAAGAAsAAAALAJ//AAAGAAwAAAALAKD/AAAGAA0AAAALAKH/AAAGAA4AAAAMAJP/AAAHAAAAAAAMAJT/AAAHAAEAAAAMAJX/AAAHAAIAAAAMAJb/AAAHAAMAAAAMAJf/AAAHAAQAAAAMAJj/AAAHAAUAAAAMAJn/AAAHAAYAAAAMAJr/AAAHAAcAAAAMAJv/AAAHAAgAAAAMAJz/AAAHAAkAAAAMAJ3/AAAHAAoAAAAMAJ7/AAAHAAsAAAAMAJ//AAAHAAwAAAAMAKD/AAAHAA0AAAAMAKH/AAAHAA4AAAANAJP/AAAIAAAAAAANAJT/AAAIAAEAAAANAJX/AAAIAAIAAAANAJb/AAAIAAMAAAANAJf/AAAIAAQAAAANAJj/AAAIAAUAAAANAJn/AAAIAAYAAAANAJr/AAAIAAcAAAANAJv/AAAIAAgAAAANAJz/AAAIAAkAAAANAJ3/AAAIAAoAAAANAJ7/AAAIAAsAAAANAJ//AAAIAAwAAAANAKD/AAAIAA0AAAANAKH/AAAIAA4AAAABAKT/AAAEAAMAAAAAAJD/AAAAAAAAAAAAAJH/AAAAAAEAAAAAAJL/AAAAAAIAAAABAJD/AAABAAAAAAABAJH/AAABAAEAAAABAJL/AAABAAIAAAACAJD/AAACAAAAAAACAJH/AAACAAEAAAACAJL/AAACAAIAAAADAJD/AAADAAAAAAADAJH/AAADAAEAAAADAJL/AAADAAIAAAAEAJD/AAAEAAAAAAAEAJH/AAAEAAEAAAAEAJL/AAAEAAIAAAAFAJD/AAAFAAAAAAAFAJH/AAAFAAEAAAAFAJL/AAAFAAIAAAANAJD/AAAAAAAAABAMAJD/AAABAAAAABALAJD/AAACAAAAABAKAJD/AAADAAAAABAJAJD/AAAEAAAAABAIAJD/AAAFAAAAABANAJH/AAAAAAEAABAMAJH/AAABAAEAABALAJH/AAACAAEAABAKAJH/AAADAAEAABAJAJH/AAAEAAEAABAIAJH/AAAFAAEAABANAJL/AAAAAAIAABAMAJL/AAABAAIAABALAJL/AAACAAIAABAKAJL/AAADAAIAABAJAJL/AAAEAAIAABAIAJL/AAAFAAIAABAGAJD/AAADAAMAAAAGAJH/AAADAAQAAAAGAJL/AAADAAUAAAAHAJD/AAAEAAMAAAAHAJH/AAAEAAQAAAAHAJL/AAAEAAUAAAAAAMv/AAAAABkAAAAAAMz/AAAAABoAAAAAAM3/AAAAABsAAAAAAM7/AAAAABwAAAAAAM//AAAAAB0AAAABAMv/AAABABkAAAABAMz/AAABABoAAAABAM3/AAABABsAAAABAM7/AAABABwAAAABAM//AAABAB0AAAACAMv/AAACABkAAAACAMz/AAACABoAAAACAM3/AAACABsAAAACAM7/AAACABwAAAACAM//AAACAB0AAAADAMv/AAADABkAAAADAMz/AAADABoAAAADAM3/AAADABsAAAADAM7/AAADABwAAAADAM//AAADAB0AAAAEAMv/AAAEABkAAAAEAMz/AAAEABoAAAAEAM3/AAAEABsAAAAEAM7/AAAEABwAAAAEAM//AAAEAB0AAAAFAMv/AAAFABkAAAAFAMz/AAAFABoAAAAFAM3/AAAFABsAAAAFAM7/AAAFABwAAAAFAM//AAAFAB0AAAAIAMv/AAAIABkAAAAIAMz/AAAIABoAAAAIAM3/AAAIABsAAAAIAM7/AAAIABwAAAAIAM//AAAIAB0AAAAJAMv/AAAJABkAAAAJAMz/AAAJABoAAAAJAM3/AAAJABsAAAAJAM7/AAAJABwAAAAJAM//AAAJAB0AAAAKAMv/AAAKABkAAAAKAMz/AAAKABoAAAAKAM3/AAAKABsAAAAKAM7/AAAKABwAAAAKAM//AAAKAB0AAAALAMv/AAALABkAAAALAMz/AAALABoAAAALAM3/AAALABsAAAALAM7/AAALABwAAAALAM//AAALAB0AAAAMAMv/AAAMABkAAAAMAMz/AAAMABoAAAAMAM3/AAAMABsAAAAMAM7/AAAMABwAAAAMAM//AAAMAB0AAAANAMv/AAANABkAAAANAMz/AAANABoAAAANAM3/AAANABsAAAANAM7/AAANABwAAAANAM//AAANAB0AAAAAANb/AAAAAB8AAAAAAN3/AAAAAB8AAAAAAOr/AAANACEAABAAAPH/AAAAAB8AAAABANb/AAABAB8AAAABAN3/AAABAB8AAAABAOr/AAAMACEAABABAPH/AAABAB8AAAACANb/AAACAB8AAAACAN3/AAACAB8AAAACAOr/AAALACEAABACAPH/AAACAB8AAAADANb/AAADAB8AAAADAN3/AAADAB8AAAADAOb/AAAFAB8AAAADAOr/AAAKACEAABADAPH/AAADAB8AAAAEANb/AAAEAB8AAAAEANr/AAAFAB8AAAAEAN3/AAAEAB8AAAAEAOb/AAAGAB8AAAAEAOr/AAAJACEAABAEAPH/AAAEAB8AAAAFANr/AAAGAB8AAAAFAN3/AAADAAQAAAAFAOb/AAAHAB8AAAAFAOr/AAAIACEAABAGANr/AAAHAB8AAAAGAN3/AAAEAAQAAAAGAOb/AAAJAB8AAAAHANr/AAAIAB8AAAAHAOb/AAALAB8AAAAHAO7/AAAFAB8AAAAIANr/AAAJAB8AAAAIAOL/AAAIACEAAAAIAOb/AAAMAB8AAAAIAOn/AAAIACEAAAAIAO7/AAAGAB8AAAAJANr/AAAKAB8AAAAJAOL/AAAJACEAAAAJAOb/AAANAB8AAAAJAOn/AAAJACEAAAAJAO7/AAAHAB8AAAAKANr/AAALAB8AAAAKAOL/AAAKACEAAAAKAOn/AAAKACEAAAAKAO7/AAAIAB8AAAALANr/AAAMAB8AAAALAOL/AAALACEAAAALAOn/AAALACEAAAALAO7/AAAJAB8AAAAMANr/AAANAB8AAAAMAOL/AAAMACEAAAAMAOn/AAAMACEAAAAMAO7/AAAMAB8AAAANAOL/AAANACEAAAANAOn/AAANACEAAAANAO7/AAANAB8AAAAAALT/AAAAABEAAAAAALX/AAAAABIAAAAAALb/AAAAABMAAAAAALf/AAAAABQAAAAAALj/AAAAABUAAAAAALn/AAAAABYAAAAAALr/AAAAABcAAAABALT/AAABABEAAAABALX/AAABABIAAAABALb/AAABABMAAAABALf/AAABABQAAAABALj/AAABABUAAAABALn/AAABABYAAAABALr/AAABABcAAAACALT/AAACABEAAAACALX/AAACABIAAAACALb/AAACABMAAAACALf/AAACABQAAAACALj/AAACABUAAAACALn/AAACABYAAAACALr/AAACABcAAAAJALX/AAAJABIAAAAJALb/AAAJABMAAAAJALf/AAAJABQAAAAJALj/AAAJABUAAAAJALn/AAAJABYAAAAJALr/AAAJABcAAAAKALT/AAAKABEAAAAKALX/AAAKABIAAAAKALb/AAAKABMAAAAKALf/AAAKABQAAAAKALj/AAAKABUAAAAKALn/AAAKABYAAAAKALr/AAAKABcAAAALALT/AAALABEAAAALALX/AAALABIAAAALALb/AAALABMAAAALALf/AAALABQAAAALALj/AAALABUAAAALALn/AAALABYAAAALALr/AAALABcAAAAMALT/AAAMABEAAAAMALX/AAAMABIAAAAMALb/AAAMABMAAAAMALf/AAAMABQAAAAMALj/AAAMABUAAAAMALn/AAAMABYAAAAMALr/AAAMABcAAAANALT/AAANABEAAAANALX/AAANABIAAAANALb/AAANABMAAAANALf/AAANABQAAAANALj/AAANABUAAAANALn/AAANABYAAAANALr/AAANABcAAAA=")
tile_set = ExtResource("1_r1qpv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -3
follow_viewport_enabled = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
z_index = -3
offset_top = -1792.0
offset_right = 224.0
offset_bottom = 256.0
texture = ExtResource("7_1dncf")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
top_level = true
limit_left = 0
limit_top = 0

[node name="MainPlayerChar" parent="." instance=ExtResource("5_33he6")]
unique_name_in_owner = true
position = Vector2(112, 170)

[node name="HUD" parent="." instance=ExtResource("4_1d85u")]

[node name="EnemyController" parent="." instance=ExtResource("4_tudxv")]

[node name="MobSpawner" parent="." instance=ExtResource("5_lmwas")]

[node name="ItemGranadaExtra" parent="." instance=ExtResource("9_3xyyb")]
position = Vector2(142, -316)

[node name="GrupoCheckpoints" type="Node" parent="."]

[node name="Checkpoint" parent="GrupoCheckpoints" instance=ExtResource("7_7eh82")]
position = Vector2(0, -195)
collision_layer = 0
collision_mask = 2

[node name="Checkpoint2" parent="GrupoCheckpoints" instance=ExtResource("7_7eh82")]
position = Vector2(0, -585)
collision_layer = 0
collision_mask = 2

[node name="Checkpoint3" parent="GrupoCheckpoints" instance=ExtResource("7_7eh82")]
position = Vector2(0, -1087)
collision_layer = 0
collision_mask = 2

[node name="Checkpoint4" parent="GrupoCheckpoints" instance=ExtResource("7_7eh82")]
position = Vector2(0, -1450)
collision_layer = 0
collision_mask = 2

[node name="Portao2" parent="." instance=ExtResource("12_q3e8m")]
position = Vector2(112, -1762)

[node name="GrupoDeathTraps" type="Node" parent="."]

[node name="ColisaoAgua" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(37, -1134)
scale = Vector2(0.8, 0.8)

[node name="ColisaoAgua4" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(38, -1161)
scale = Vector2(0.8, 0.8)

[node name="ColisaoAgua5" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(15, -1191)
rotation = 1.309

[node name="ColisaoAgua3" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(13, -1128)
rotation = 1.22173

[node name="ColisaoAgua2" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(37, -1190)
scale = Vector2(0.9, 0.9)

[node name="ColisaoAgua6" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(154, -1192)
scale = Vector2(0.8, 0.8)

[node name="ColisaoAgua7" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(156, -1162)

[node name="ColisaoAgua8" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(156, -1128)

[node name="ColisaoAgua9" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(177, -1130)
rotation = 1.39626

[node name="ColisaoAgua10" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(213, -1130)
rotation = 1.91986
scale = Vector2(1.3, 1.3)

[node name="ColisaoAgua11" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(178, -1187)
rotation = 1.5708

[node name="ColisaoAgua12" parent="GrupoDeathTraps" instance=ExtResource("3_vd7x2")]
position = Vector2(210, -1188)
rotation = 1.5708

[node name="ColisaoPitfall" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(40, -238)
scale = Vector2(1.4, 0.2)

[node name="ColisaoPitfall21" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(146, -286)
scale = Vector2(1, 0.2)

[node name="ColisaoPitfall23" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(161, -366)
scale = Vector2(1, 0.2)

[node name="ColisaoPitfall26" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(16, -350)
scale = Vector2(1, 0.2)

[node name="ColisaoPitfall27" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(79, -414)
scale = Vector2(1, 0.2)

[node name="ColisaoPitfall28" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(127, -414)
scale = Vector2(1, 0.2)

[node name="ColisaoPitfall29" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(161, -478)
scale = Vector2(1, 0.2)

[node name="ColisaoPitfall30" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(208, -478)
scale = Vector2(1, 0.2)

[node name="ColisaoPitfall31" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(40, -557)
scale = Vector2(1.4, 0.15)

[node name="ColisaoPitfall32" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(106, -605)
scale = Vector2(1.4, 0.18)

[node name="ColisaoPitfall34" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(40, -670)
scale = Vector2(1.3, 0.18)

[node name="ColisaoPitfall33" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(170, -605)
scale = Vector2(1.2, 0.18)

[node name="ColisaoPitfall24" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(208, -366)
scale = Vector2(1, 0.2)

[node name="ColisaoPitfall25" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(64, -349)
scale = Vector2(1, 0.15)

[node name="ColisaoPitfall22" parent="GrupoDeathTraps" instance=ExtResource("4_kb30a")]
position = Vector2(193, -286)
scale = Vector2(1, 0.2)

[node name="infantaria_escondida_mapa" type="Node" parent="."]

[node name="Infantaria_Escondida" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(187, -1161)

[node name="Infantaria_Escondida2" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(10, -1162)

[node name="Infantaria_Escondida3" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(38, -553)
submersa = false

[node name="Infantaria_Escondida5" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(171, -602)
submersa = false

[node name="Infantaria_Escondida7" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(40, -667)
submersa = false

[node name="Infantaria_Escondida8" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(162, -474)
submersa = false

[node name="Infantaria_Escondida11" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(126, -408)
submersa = false

[node name="Infantaria_Escondida12" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(79, -408)
submersa = false

[node name="Infantaria_Escondida13" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(63, -346)
submersa = false

[node name="Infantaria_Escondida14" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(16, -344)
submersa = false

[node name="Infantaria_Escondida15" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(161, -361)
submersa = false

[node name="Infantaria_Escondida16" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(208, -361)
submersa = false

[node name="Infantaria_Escondida17" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(193, -282)
submersa = false

[node name="Infantaria_Escondida18" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(146, -281)
submersa = false

[node name="Infantaria_Escondida19" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(40, -232)
submersa = false

[node name="Infantaria_Escondida9" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(206, -474)
submersa = false

[node name="Infantaria_Escondida4" parent="infantaria_escondida_mapa" instance=ExtResource("14_tudxv")]
position = Vector2(106, -602)
submersa = false

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(112, 170)

[node name="MotoTerraSpawner" parent="." instance=ExtResource("17_3xyyb")]
position = Vector2(-1, 52)

[node name="Turret" parent="." instance=ExtResource("18_dmwlo")]
position = Vector2(21, -1492)

[node name="HQSpawner" parent="." instance=ExtResource("25_b25kb")]
position = Vector2(53, -975)

[node name="JeepSpawner" parent="." instance=ExtResource("16_wkod3")]

[node name="Turret2" parent="." instance=ExtResource("18_dmwlo")]
position = Vector2(21, -1235)

[node name="Turret3" parent="." instance=ExtResource("18_dmwlo")]
position = Vector2(204, -1365)

[node name="Troca_infantaria" parent="." instance=ExtResource("27_qh2i0")]
position = Vector2(103, -860)
inimigo = "Bazuca"

[node name="Troca_infantaria2" parent="." instance=ExtResource("27_qh2i0")]
position = Vector2(87, -1102)

[node name="HumveeSpawner" parent="." instance=ExtResource("28_vo0m5")]
position = Vector2(242, -69)

[node name="MotoTerraSpawner2" parent="." instance=ExtResource("17_3xyyb")]
position = Vector2(246, -102)

[node name="MotoSpawn" parent="." instance=ExtResource("29_nyldk")]
position = Vector2(204, -830)

[connection signal="body_entered" from="Trigger" to="." method="_on_trigger_body_entered"]
[connection signal="body_entered" from="Trigger" to="CaveSpawner" method="_on_trigger_body_entered"]
[connection signal="body_entered" from="Trigger" to="MobSpawner" method="_on_trigger_body_entered"]
[connection signal="dead_player" from="MainPlayerChar" to="." method="_on_main_player_char_dead_player"]
